# swagger/spring-server/src/main/java/io/lozzikit/discussions/api/endpoints/CommentsApiController.java
@@ -27,8 +27,14 @@ public class CommentsApiController implements CommentsApi {
     CommentService commentService;
 
     @Override
-    public ResponseEntity<List<CommentResponse>> commentsGet(@NotNull @ApiParam(value = "The articleID the user want to list comment from", required = true) @RequestParam(value = "articleID", required = true) Long articleID) {
-        List<CommentResponse> responses = commentService.getCommentsFromArticleID(articleID);
+    public ResponseEntity<List<CommentResponse>> commentsGet( @NotNull @ApiParam(value = "The articleID the user want to list comment from", required = true) @RequestParam(value = "articleID", required = true) Long articleID,
+                                                              @ApiParam(value = "If the user wants to get a tree representation of the comments", defaultValue = "false") @RequestParam(value = "tree", required = false, defaultValue="false") Boolean tree) {
+        List<CommentResponse> responses;
+
+        if(tree)
+            responses = commentService.getCommentsTreeFromArticleID(articleID);
+        else
+            responses = commentService.getCommentsFlatFromArticleID(articleID);
 
         return ResponseEntity.ok(responses);
     }
